--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.mail.username=mfmsproject7@gmail.com
 spring.mail.password=coec exbj btqn zrnv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+# Set the logging level
+logging.level.root=INFO
