--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=MFMSProject
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/mfms
-#spring.datasource.username=root
-#spring.datasource.password=19JRbgopi7@
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-
-
-spring.datasource.url=jdbc:mysql://192.168.2.60:3306/FMS
-spring.datasource.username=gopi
-spring.datasource.password=gopi@12345
+spring.datasource.url=jdbc:mysql://localhost:3306/mfms
+spring.datasource.username=root
+spring.datasource.password=19JRbgopi7@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+
+#spring.datasource.url=jdbc:mysql://192.168.2.60:3306/FMS
+#spring.datasource.username=gopi
+#spring.datasource.password=gopi@12345
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # No need to use ddl-auto since we are using native queries
 spring.jpa.hibernate.ddl-auto=update
@@ -34,5 +34,9 @@ logging.level.root=INFO
 #springdoc.api-docs.path=/v3/api-docs
 #springdoc.swagger-ui.path=/swagger-ui.html
 
+# Tell Spring Boot to use Log4j2 for logging
+logging.config=classpath:log4j2.xml
 
+#enable ansi colors
+spring.output.ansi.enabled=ALWAYS
 
