--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,4 @@
-spring.application.name=MFMSProject
-
-
-
-spring.datasource.url=jdbc:mysql://192.168.2.60:3306/FMS
+spring.datasource.url=jdbc:mysql://192.168.2.60:3306/MFMS_DEV
 spring.datasource.username=gopi
 spring.datasource.password=gopi@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
