--- a/src/main/resources/application-local-test.properties
+++ b/src/main/resources/application-local-test.properties
@@ -1,9 +1,8 @@
-spring.application.name=MFMSProject
 
 #local home at office
-spring.datasource.url=jdbc:mysql://localhost:3306/mfms
-spring.datasource.username=root
-spring.datasource.password=19JRbgopi7@
+spring.datasource.url=jdbc:mysql://192.168.2.60:3306/MFMS_TEST
+spring.datasource.username=gopi
+spring.datasource.password=gopi@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
