--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,7 @@
-spring.application.name=MFMSProject
-
-
-
-
-spring.datasource.url=jdbc:mysql://192.168.2.60:3306/FMS
+#database for production
+spring.datasource.url=jdbc:mysql://192.168.2.60:3306/MFMS_PROD
 spring.datasource.username=gopi
-spring.datasource.password=gopi@12345
+spring.datasource.password=gopi@1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # No need to use ddl-auto since we are using native queries
