--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,17 @@
     <artifactId>spring-context</artifactId>
     <version>6.1.14</version>
 </dependency>
+<!-- Updated Apache Tomcat -->
+    <dependency>
+        <groupId>org.apache.tomcat.embed</groupId>
+        <artifactId>tomcat-embed-core</artifactId>
+        <version>10.1.31</version>
+    </dependency>
+<dependency>
+    <groupId>org.apache.tomcat.embed</groupId>
+    <artifactId>tomcat-embed-core</artifactId>
+    <version>10.1.31</version>
+</dependency>
 
 
 	</dependencies>
@@ -187,10 +198,10 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.owasp</groupId>
 				<artifactId>dependency-check-maven</artifactId>
-				<version>7.0.0</version> <!-- Use the latest version -->
+				<version>7.0.0</version>  Use the latest version 
 				<executions>
 					<execution>
 						<goals>
@@ -199,11 +210,11 @@
 					</execution>
 				</executions>
 				<configuration>
-					<format>JSON</format>  <!-- Specify JSON output format -->
-					<outputDirectory>target/dependency-check-report</outputDirectory>  <!--
-					Output directory -->
+					<format>JSON</format>   Specify JSON output format 
+					<outputDirectory>target/dependency-check-report</outputDirectory>  
+					Output directory 
 				</configuration>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 
